fixing all endpoints with objectID
issue #139
