# controllers/crp.go
@@ -74,9 +74,9 @@ func (j *SolicitudesCRPController) GetAll() {
 // @Param	nombre		path 	string	true		"El nombre de la SolicitudCRP a consultar"
 // @Success 200 {object} models.SolicitudCRP
 // @Failure 403 :uid is empty
-// @router /:objectId [get]
+// @router /:id [get]
 func (j *SolicitudesCRPController) Get() {
-	objectId := j.GetString(":objectId")
+	objectId := j.GetString(":id")
 
 	if objectId != "" {
 		SolicitudCRP, err := models.GetSolicitudCRPByID(objectId)
@@ -113,13 +113,13 @@ func (j *SolicitudesCRPController) Post() {
 // Put de HTTP
 // @Title Update
 // @Description update the SolicitudCRP
-// @Param	objectId		path 	string	true		"The objectid you want to update"
+// @Param	id		path 	string	true		"The id you want to update"
 // @Param	body		body 	models.Object	true		"The body"
 // @Success 200 {object} models.Object
-// @Failure 403 :objectId is empty
-// @router /:objectId [put]
+// @Failure 403 :id is empty
+// @router /:id [put]
 func (j *SolicitudesCRPController) Put() {
-	objectID := j.Ctx.Input.Param(":objectId")
+	objectID := j.Ctx.Input.Param(":id")
 	var SolicitudCRP models.SolicitudCRP
 
 	json.Unmarshal(j.Ctx.Input.RequestBody, &SolicitudCRP)
@@ -137,12 +137,12 @@ func (j *SolicitudesCRPController) Put() {
 // Delete ...
 // @Title Borrar SolicitudCRP
 // @Description Borrar SolicitudCRP
-// @Param	objectId		path 	string	true		"El ObjectId del objeto que se quiere borrar"
+// @Param	id		path 	string	true		"El id del objeto que se quiere borrar"
 // @Success 200 {string} ok
-// @Failure 403 objectId is empty
-// @router /:objectId [delete]
+// @Failure 403 id is empty
+// @router /:id [delete]
 func (j *SolicitudesCRPController) Delete() {
-	objectID := j.Ctx.Input.Param(":objectId")
+	objectID := j.Ctx.Input.Param(":id")
 
 	if err := models.DeleteSolicitudCRP(objectID); err == nil {
 		j.response = DefaultResponse(200, nil, "delete success!")
